[package]
name = "tonic-transport"
version = "0.1.0"
edition = "2021"
categories = ["network-programming", "asynchronous"]
publish = false
keywords = ["rpc", "grpc", "async", "openssl"]
readme = "README.md"
repository = "https://github.com/nrc/tonic-transport"

[dependencies]
async-stream = "0.3"
axum = {version = "0.5.15", default_features = false}
bytes = "1.0"
futures-core = {version = "0.3", default-features = false}
futures-util = {version = "0.3", default-features = false}
h2 = {version = "0.3"}
http = "0.2"
http-body = "0.4.4"
hyper = {version = "0.14.14", features = ["full"]}
hyper-timeout = {version = "0.4"}
native-tls = {version = "0.2", path="../rust-native-tls", features = ["alpn"]}
pin-project = "1.0"
thiserror = "1.0"
tokio = {version = "1.0.1", features = ["net"]}
tokio-native-tls = {version = "0.3.0", path="../tokio-tls/tokio-native-tls"}
tokio-stream = "0.1"
tokio-util = {version = "0.7", features = ["codec"]}
tonic = {version = "0.8", features = ["codegen", "prost"], path = "../tonic/tonic" }
tower = {version = "0.4.7", default-features = false, features = ["balance", "buffer", "discover", "limit", "load", "make", "timeout", "util"]}
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
