[package]
edition = "2021"
name = "tonic-transport-examples"
publish = false
version = "0.1.0"

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client"
path = "src/client.rs"

[dependencies]
tonic-transport = {version = "0.1", path = "../../tonic-transport" }
tonic = {version = "0.8", path = "../../tonic/tonic" }
openssl = "0.10"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-native-tls = {version = "0.3.0", path="../../tokio-tls/tokio-native-tls"}

[build-dependencies]
tonic-build = {version = "0.8", path = "../../tonic/tonic-build" }
