[package]
edition = "2021"
name = "tonic-transport-examples"
publish = false
version = "0.1.0"

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client"
path = "src/client.rs"

[dependencies]
tonic-transport = {version = "0.1", path = ".." }
tonic = {version = "0.8", git = "https://github.com/nrc/tonic.git", branch = "pub-status" }
openssl = "0.10"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-native-tls = {version = "0.3.0", git = "https://github.com/nrc/tokio-tls.git", branch = "deps"}

[build-dependencies]
tonic-build = {version = "0.8", git = "https://github.com/nrc/tonic.git", branch = "pub-status" }
